// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders 1`] = `
<div>
  <div
    class="py-2"
    data-testid="undefined-field"
  >
    <label
      class="block text-sm font-medium leading-6 text-gray-900"
    >
      username
    </label>
    <input
      class="w-full text-sm p-3 rounded outline-none border-2 focus:border-blue-500"
    />
  </div>
</div>
`;

exports[`Field renders with error 1`] = `
<div>
  <div
    class="py-2"
    data-testid="undefined-field"
  >
    <label
      class="block text-sm font-medium leading-6 text-gray-900"
    >
      username
    </label>
    <input
      class="w-full text-sm p-3 rounded outline-none border-2 focus:border-blue-500"
    />
    <div
      class="pt-2"
    >
      <div
        class="text-sm text-red-600"
      >
        Username is required
      </div>
    </div>
  </div>
</div>
`;
